src/global.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap');

html {
  padding: 0;
  margin: 0;
  font-family: 'Poppins', sans-serif !important;
}

body {
  font-family: 'Poppins', sans-serif !important;
}

section {
  height: 100vh;
  width: 100%;
}

.flexbox {
  height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.centerItems {
  height: 80vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.inputBox {
  width: 100%;
  background-color: #e9f5f8;
  border: none;
  border-radius: 10px;
  padding: 20px;
  text-decoration-color: black;
  color: black;
}

textarea:focus {
  animation: none !important;
}

footer {
  color: #b9a4de;
}

.appTitle {
  color: #88a8be;
  text-decoration: none;
}

.appTitle:hover {
  color: #566d7c;
  text-decoration: none;
}

.logo-text {
  color: #cdc3f3;
  font-weight: 600;
  letter-spacing: 0.1em;
}

@media screen and (max-width: 500px) {
  .logo-text {
    font-size: 20px;
  }
  .landing-page-text {
    font-size: 34px;
  }
}

